# warp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  plan.md
.github/workflows/: release.yml
scripts/: build.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
warp-site/: next.config.ts  package-lock.json  package.json
warp-site/app/: globals.css  layout.tsx  page.tsx
warp-site/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Problem.tsx
